@startuml

' Ustawienia stylistyczne dla czytelności
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle

title Diagram Klas Systemu Gry w Go

' ---------------------------------------------------------
' PAKIET SHARED (Współdzielone)
' ---------------------------------------------------------
package "Shared (Wspólne)" {

    enum StoneColor {
        BLACK
        WHITE
        EMPTY
    }

    class Board {
        - int size
        - StoneColor[][] grid
        + Board(int size)
        + getStone(int x, int y) : StoneColor
        + setStone(int x, int y, StoneColor color) : void
        + removeStone(int x, int y) : void
        + getSize() : int
        + clear() : void
    }
}

' ---------------------------------------------------------
' PAKIET SERVER (Logika biznesowa i sieciowa)
' ---------------------------------------------------------
package "Server" {

    class GoServer {
        - static int port = 1111
        + main(String[] args)
        + start() : void
    }

    class Game {
        - PlayerHandler blackPlayer
        - PlayerHandler whitePlayer
        - PlayerHandler currentPlayer
        - Board board
        - GameLogic gameLogic
        - boolean gameOver
        - boolean isUnderNegotiation
        - boolean[] playerAgreed
        - int blackPrisoners
        - int whitePrisoners
        + Game(PlayerHandler p1, PlayerHandler p2, int size)
        + processMove(int x, int y, PlayerHandler player) : synchronized void
        + processPass(PlayerHandler player) : synchronized void
        + processQuit(PlayerHandler player) : synchronized void
        + processResume(PlayerHandler player) : synchronized void
        + processAgree(PlayerHandler player) : synchronized void
        - switchTurn() : void
        - BroadcastMessage(String message) : void
        - endGame() : void
    }

    class PlayerHandler implements Runnable {
        - Socket socket
        - PrintWriter output
        - BufferedReader input
        - Game game
        - StoneColor color
        + PlayerHandler(Socket socket, StoneColor color)
        + run() : void
        + sendMessage(String msg) : void
        + setGame(Game game) : void
        + setColor(StoneColor color) : void
        + getColor() : StoneColor
        - setupStreams() : void
        - handleCommand(String command) : void
        - closeConnection() : void
    }

    class GameLogic {
        - int regionSize
        + validateMove(Board board, int x, int y) : boolean
        + countChainLiberties(Board board, int startX, int startY, StoneColor color) : int
        + checkCaptures(Board board, int x, int y, StoneColor color) : ArrayList<int[]>
        + finalCheck(Board board, int x, int y, StoneColor color) : StoneColor
        + isKo(Board board, int[] lastMove, int x, int y) : boolean
        + countTerritory(Board board) : int[]
        - inBounds(Board board, int x, int y) : boolean
        - getChain(Board board, int startX, int startY, StoneColor color) : ArrayList<int[]>
        - checkRegionOwner(Board board, int x, int y, boolean[][] visited) : StoneColor
    }
}

' ---------------------------------------------------------
' PAKIET CLIENT (Warstwa prezentacji)
' ---------------------------------------------------------
package "Client" {

    class "Application" as JavaFXApp {
        ' Klasa bazowa JavaFX
    }

    class GoClient {
        + main(String[] args)
        + start(Stage primaryStage) : void
        - askForServerAddress() : String
        - showError(String header, String content) : void
    }

    class ClientGameController {
        - Socket socket
        - PrintWriter out
        - GuiView view
        - StoneColor myColor
        - boolean isGameRunning
        + ClientGameController(Socket socket, GuiView view) throws Exception
        + startListener() : void
        + handleServerMessage(String message) : void
        + handleConnectionError() : void
        - closeConnection() : void
    }

    class ServerListener implements Runnable {
        - BufferedReader in
        - ClientGameController controller
        + ServerListener(InputStream inputStream, ClientGameController controller)
        + run() : void
    }

    class GuiView {
        - int size
        - BorderPane root
        - Pane boardPane
        - Label statusLabel
        - Label colorLabel
        - ClientGameController controller
        - Circle[][] stones
        + GuiView(int size)
        + setController(ClientGameController controller) : void
        + getRoot() : Parent
        + updateBoard(int x, int y, StoneColor color) : void
        + setMessage(String msg) : void
        + setColor(String color) : void
        + setTurn(boolean myTurn) : void
        + setErr(String err) : void
    }

    class ConsoleView {
        ' Klasa obecna w plikach, ale nieużywana w wersji GUI
        - Scanner scanner
        - Board board
        + ConsoleView(int size)
        + displayBoard() : void
        + getUserInput() : String
    }
}

' ---------------------------------------------------------
' RELACJE
' ---------------------------------------------------------

' Serwer
GoServer ..> Game : <<creates>>
GoServer ..> PlayerHandler : <<creates>>

Game "1" *-- "1" Board : zawiera
Game "1" *-- "1" GameLogic : używa
Game "1" o-- "2" PlayerHandler : ma graczy

GameLogic ..> Board : analizuje
GameLogic ..> StoneColor : używa
PlayerHandler --> Game : deleguje komendy

' Klient
GoClient --|> JavaFXApp : extends
GoClient ..> GuiView : <<creates>>
GoClient ..> ClientGameController : <<creates>>
GoClient ..> Socket : <<creates>>

ClientGameController "1" o-- "1" GuiView : steruje
ClientGameController "1" *-- "1" ServerListener : posiada

GuiView --> ClientGameController : wysyła input użytkownika
ServerListener --> ClientGameController : przekazuje komunikaty

' Wspólne
Board *-- StoneColor
Game ..> StoneColor
GuiView ..> StoneColor
ClientGameController ..> StoneColor

@enduml